k8shpalimit-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8shpalimit
spec:
  crd:
    spec:
      names:
        kind: K8sHpaLimit
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          properties:
            maxReplicas:
              type: integer
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8shpalimit
        violation[{"msg": msg}] {
          input.review.object.spec.maxReplicas > input.parameters.maxReplicas
          msg := sprintf("The replicas requested are greater than %v is allowed", [input.parameters.maxReplicas])
        }
